fix body overflow

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     height: fit-content;
     min-height: 100vh;
     min-height: 100svh;
+    overflow-x: hidden;
 }
 
 .page {
